Refactored message handling, and some other changes. (#28)