@@ -3,12 +3,13 @@ package com.github.karsaii.core.namespaces.executor;
 import com.github.karsaii.core.extensions.namespaces.predicates.BasicPredicates;
 import com.github.karsaii.core.records.Data;
 import com.github.karsaii.core.records.executor.ExecutionStateData;
-import org.eclipse.collections.impl.list.Interval;
 
 import java.util.ArrayList;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 import static com.github.karsaii.core.extensions.namespaces.NullableFunctions.isNotNull;
 
@@ -23,7 +24,7 @@ public interface ExecutionStateDataFactory {
 
     private static List<Integer> getListWithIndices(int length) {
         final var localLength = BasicPredicates.isPositiveNonZero(length) ? length : 0;
-        return Interval.zeroTo(localLength > 0 ? localLength - 1 : localLength).toList();
+        return IntStream.range(0, localLength < 2 ? 1 : localLength).boxed().collect(Collectors.toList());
     }
 
     static ExecutionStateData getWith(Map<String, Data<?>> map, List<Integer> indices) {
